Add validation, immutability and safety to models
Introduce input validation, immutability and safety checks across model classes.

- Board: define SIZE constant, make grid final, add checkBounds, getCell, and validate placement (throw on out-of-bounds or occupied cell). Use BONUS_MAP with SIZE and tidy formatting.
- Move: prevent duplicate placements on add, return unmodifiable placements list, make recallPlacement safe, and add helper min/max row/col methods for move logic.
- Player: add UUID id, expose unmodifiable rack, replace isSkipped with isPenalized, add RACK_SIZE, enforce rack size when adding tiles, change removeTiles to remove elements individually, and add getId. Constructor signature updated to accept UUID.
- TileBag: simplify tile creation (no reusable Tile variables), shuffle the pool, validate drawTiles (throw when requesting more than available), and remove the internal refillTiles method (controller will handle refills).

These changes improve robustness (bounds/duplication/overflow checks), encapsulation (unmodifiable collections, final fields) and prepare models for safer game-controller usage.